--- a/reports_and_databases.tex
+++ b/reports_and_databases.tex
@@ -509,6 +509,7 @@ are, then do the positioning for you.}. 为打印程序写一个 awk 程序, 该
 
 \marginpar{99}
 \begin{exercise}
+    \label{exer:form3_form4}
     修改 \verb'form3' 与 \verb'form4': 从别处获取日期, 而
     不是将日期硬编码到代码中.
 \end{exercise}
@@ -519,6 +520,7 @@ are, then do the positioning for you.}. 为打印程序写一个 awk 程序, 该
 \end{exercise}
 
 \begin{exercise}
+    \label{exer:table_format}
     表格格式化程序假定所有数字的小数部分的位数都是相同的, 修改它, 使得即使 
     这个假定不成立, 程序也可以正确地工作.
 \end{exercise}
