在 "Exercise" 与 编号之间留一个空格

--- a/preamble.tex
+++ b/preamble.tex
@@ -154,7 +154,7 @@
 \theoremheaderfont{\bfseries}
 \theorembodyfont{\normalfont}
 \newtheorem{exercise}{Exercise}[chapter]
-\newcommand\exer{\textbf{Exercise}}
+\newcommand\exer{\textbf{Exercise\ }}
 
 % 设置目录中 subsection 的缩进
 \settowidth\cftsubsecindent{2}
