"executable" is not a filename

--- a/index.tex
+++ b/index.tex
@@ -665,7 +665,7 @@
 
 \hangindent=3pc \hangafter=1 file, \verb'emp.data' 1
 
-\hangindent=3pc \hangafter=1 file, \verb'executable' 65
+\hangindent=3pc \hangafter=1 file, executable 65
 
 \hangindent=3pc \hangafter=1 file, standard error 59
 
