--- a/reports_and_databases.tex
+++ b/reports_and_databases.tex
@@ -476,7 +476,7 @@ are, then do the positioning for you.}. 为打印程序写一个 awk 程序, 该
     }
 \end{awkcode}
 第一次遍历记录数据与每列的最大宽度, 第二次遍历 (位于 \END) 在适当的位置打印
-每一项. 对字母项进行左对齐操作起来比较容易: 我们使用 \verb'wid[i]' (第 
+每一项. 对字母项进行左对齐比较容易: 我们使用 \verb'wid[i]' (第 
 \verb'i' 列的最大宽度) 为 \printf 构造格式字符串, 比如说, 如果列的最大宽度
 是 10, 则第 \verb'i' 列的格式字符串就是 \verb'%-10s' (假设该列是字母项).
 
