--- a/reports_and_databases.tex
+++ b/reports_and_databases.tex
@@ -602,6 +602,7 @@ are, then do the positioning for you.}. 为打印程序写一个 awk 程序, 该
 \end{awkcode}
 
 \begin{exercise}
+    \label{exer:info}
     修改 \texttt{info}: 参数通过 \texttt{ARGV} 传递进来, 而不是由 shell 
     进行替换.
 \end{exercise}
