--- a/reports_and_databases.tex
+++ b/reports_and_databases.tex
@@ -1166,9 +1166,9 @@ awk 程序.
 \end{exercise}
 
 \begin{exercise}
-	修改 \texttt{qawk}, 使得它可以检查即将作为输入的导出表是否已经
-	存在. 如果导出表已经存在, 并且基表在导出表被构造出来之后未曾
-	修改过, 那我们就可以直接使用该导出表, 而不用重新构造. 可以参考
+	修改 \texttt{qawk}, 使得它可以检查即将作为输入数据的导出文件是否已经
+	存在. 如果文件已经存在, 并且基文件在导出文件被导出之后未曾
+	修改过, 那么我们就可以直接使用该导出文件, 而不用重新计算. 可以参考
 	第 \ref{chap:experiments_with_algorithms} 章的程序 \texttt{make}.
 \end{exercise}
 
