--- a/processing_words.tex
+++ b/processing_words.tex
@@ -73,13 +73,16 @@
 \texttt{n} 就递减一次.
 
 \begin{exercise}
+    \label{exer:rand}
     测试 \texttt{rand} 的输出是不是真的随机数.
 \end{exercise}
 \begin{exercise}
+    \label{exer:rand2}
     写一个程序, 该程序生成 1 到 $n$ 之间 $k$ 个不同的随机整数,
     程序的时间复杂 度与 $k$ 成正比.
 \end{exercise}
 \begin{exercise}
+    \label{exer:bridge_hands}
     写一个程序, 该程序生成随机的桥牌手 (bridge hands).
 \end{exercise}
 
