--- a/processing_words.tex
+++ b/processing_words.tex
@@ -78,12 +78,12 @@
 \end{exercise}
 \begin{exercise}
     \label{exer:rand2}
-    写一个程序, 该程序生成 1 到 $n$ 之间 $k$ 个不同的随机整数,
-    程序的时间复杂 度与 $k$ 成正比.
+    写一个程序, 该程序生成 1 到 $n$ 之间的 $k$ 个互不相同的随机整数,
+    要求程序的时间复杂度与 $k$ 成正比.
 \end{exercise}
 \begin{exercise}
     \label{exer:bridge_hands}
-    写一个程序, 该程序生成随机的桥牌手 (bridge hands).
+    写一个随机地生成四手桥牌的程序.
 \end{exercise}
 
 \subsection{废话生成器}
