--- a/processing_words.tex
+++ b/processing_words.tex
@@ -83,7 +83,7 @@
 \end{exercise}
 \begin{exercise}
     \label{exer:bridge_hands}
-    写一个随机地生成四手桥牌的程序.
+    写一个随机生成四手桥牌的程序.
 \end{exercise}
 
 \subsection{废话生成器}
