translate to page 200/210

--- a/processing_words.tex
+++ b/processing_words.tex
@@ -340,17 +340,20 @@ girl runs very very quickly'' 这样的句子可以用下面的语法来描述:
 \end{exercise}
 
 \begin{exercise}
+    \label{exer:length_limit}
     在某些语法规则下, 语句生成程序很有可能落入到这样一种境地:
     推导过程越来越长, 却没有停下来的迹象, 添加一条机制, 使得程序可以限制
     推导过程的长度.
 \end{exercise}
 
 \begin{exercise}
+    \label{exer:weight}
     给语法规则加上权重, 使得对同一个非终结符来说, 它的各个展开规则被选中
     的概率是不同的.
 \end{exercise}
 
 \begin{exercise}
+    \label{exer:nonrecursive}
     实现一个非递归的语句生成程序.
 \end{exercise}
 
