--- a/processing_words.tex
+++ b/processing_words.tex
@@ -502,6 +502,7 @@ girl runs very very quickly'' 这样的句子可以用下面的语法来描述:
 \texttt{N}).
 
 \begin{exercise}
+    \label{exer:quiz}
     修改 \texttt{quiz}: 对于同一道问题最多输出一次.
 \end{exercise}
 
@@ -546,6 +547,7 @@ girl runs very very quickly'' 这样的句子可以用下面的语法来描述:
 \end{file}
 
 \begin{exercise}
+    \label{exer:wordcount}
     修改单词计数程序: 不区分单词大小写, 于是 \texttt{The} 与
     \texttt{the} 被当作是同一个单词.
 \end{exercise}
@@ -591,6 +593,7 @@ girl runs very very quickly'' 这样的句子可以用下面的语法来描述:
 \end{awkcode}
 
 \begin{exercise}
+    \label{exer:fmt_justify}
     修改 \texttt{fmt}: 对齐输出文本的右边空白.
 \end{exercise}
 
