translate to page 201/210

--- a/answers_to_selected_exercises.tex
+++ b/answers_to_selected_exercises.tex
@@ -525,4 +525,8 @@ TODO}这样做可以 让 \texttt{gen} 中的测试更简单一点, 否则的话,
 \texttt{cnt} 个单词, 那就有 \texttt{cnt-1} 个缝隙需要填充空格. 如果有
 \textit{n} 个空格, 那么每个缝隙占用 \textit{n}\texttt{/(cnt-1)} 个. 对
 每一个单词, 程序计算缝隙占用的空格数, 然后递减缝隙和空格的数量.
+If the extra blanks do not distribute evenly, the surplus ones are spread
+alternately from the left and the right on successive lines, to avoid
+``rivers'' of white space.\footnote{TODO}
+\marginpar{202}
 
