--- a/processing_words.tex
+++ b/processing_words.tex
@@ -1141,6 +1141,7 @@ actual data.}
 \end{exercise}
 
 \begin{exercise}
+    \label{exer:literal}
     允许索引字中出现字面意义上的 \texttt{[}, \texttt{]}, \verb'~' 与 
     \verb'%'
 \end{exercise}
