--- a/answers_to_selected_exercises.tex
+++ b/answers_to_selected_exercises.tex
@@ -655,3 +655,64 @@ alternately from the left and the right on successive lines, to avoid
 \texttt{transpose}. 这里提供了过滤器的一个实现, 通过修改 \texttt{graph}
 来得到:
 \marginpar{204}
+\begin{awkcode}
+    # transpose - input and output suitable for graph
+    #   input:  data and specification of a graph
+    #   output: data and specification for the transposed graph
+
+    BEGIN {
+        number = "^[-+]?([0-9]+[.]?[0-9]*|[.][0-9]+)" \
+                                "([eE][-+]?[0-9]+)?$"
+    }
+    $1 == "bottom" && $2 == "ticks" {     # ticks for x-axis
+        $1 = "left"
+        print
+        next
+    }
+    $1 == "left" && $2 == "ticks" {       # ticks for y-axis
+        $1 = "bottom"
+        print
+        next
+    }
+    $1 == "range" {                       # xmin ymin xmax ymax
+        print $1, $3, $2, $5, $4
+        next
+    }
+    $1 == "height" { $1 = "width"; print; next }
+    $1 == "width"  { $1 = "height"; print; next }
+    $1 ~ number && $2 ~ number  { nd++; print $2, $1, $3; next }
+    $1 ~ number && $2 !~ number { # single number:
+        nd++                      #   count data points
+        print $1, nd, $2          #   fill in both x and y
+        next
+    }
+    { print }
+\end{awkcode}
+对数坐标轴的一个简单版本也可以用同样的方法来实现.
+
+\myexer\ref{exer:calc2} 只需要在 \texttt{if} 语句中多增加几种判断情形即可,
+例如:
+\begin{awkcode}
+    else if ($i == "pi")
+        stack[++top] = 3.1415926535879
+\end{awkcode}
+
+\myexer\ref{exer:check} 条件 \texttt{A[i] > A[i+1]} 在本质上是不变的, 
+% XXX 原文应该有误
+因为这是由算法保证的, 所以它应该总是为真. 真正的问题是 \texttt{check} 并
+不检查输出是否是输入的一个排列: 如果元素被移到了数组边界之外, 它也不会
+发现.
+
+\myexer\ref{exer:time_used} 第 \ref{chap:epilog} 章曾经简单地描述过:
+awk 使用哈稀表来存放数组. 在小数组中查找元素时, 哈稀表只需要常量的时间,
+但是当数组变大时, 查找时间也会增加.
+
+\myexer\ref{exer:end_exit} 由 \texttt{makeprof} 插入的 \texttt{END} 动
+作, 是在所有其他的 \texttt{END} 执行完之后才会轮到它们执行. 所以, 如果 
+前面先执行的 \texttt{END} 中含有 \texttt{exit} 语句, 就会提前终止程序.
+部分的解决方案是把 \texttt{END} 插入到所有其他 \texttt{END} 的前面.
+
+\myexer\ref{exer:rtsort} 把节点压入到栈中, 而不是把它们打印出来. 当输入
+结束时, 从栈底开始打印结点. 另一种解决办法是交换 \verb'$1' 与 \verb'$2'
+的功能, 这既可以在  \texttt{rtsort} 中完成, 也可以通过一个单独的程序来
+实现.
