--- a/awk_summary.tex
+++ b/awk_summary.tex
@@ -8,20 +8,20 @@
 
 \subsubsection{命令行}
 \begin{quote}
-    \texttt{awk [-F}\textit{s}\texttt{] '}
-    \textit{program}\texttt{'}\textit{optional list of filenames}
+    \texttt{awk [-F}\textit{s}\texttt{] '}%
+    \textit{program}\texttt{'}\ \ \textit{optional list of filenames}
 
-    \texttt{awk [-F}\textit{s}\texttt{] ' -f}
-    \textit{progfile}\texttt{'}\textit{optional list of filenames}
+    \texttt{awk [-F}\textit{s}\texttt{] -f}
+    \textit{progfile}\ \ \textit{optional list of filenames}
 \end{quote}
 参数 \texttt{-F}\textit{s} 把字段分隔符 \texttt{FS} 设置成 \textit{s},
 如果没有提供文件名, awk 就从标准输入读取数据. 文件名的形式可以是 
 \textit{var}\texttt{=}\textit{text}, 在这种情况下, 相当于把 \textit{text}
 赋值给变量 \textit{var}, 当这个参数被当作一个文件而被访问时, 执行赋值
-语句. 
+操作.
 
 \subsubsection{AWK 程序}
-一个 awk 程序由一系列的 \patact 语句和函数定义组成. 一个模式动作语句具有
+一个 awk 程序由一系列的 \patact 语句和函数定义组成. 一个 \patact 语句具有
 形式:
 \begin{quote}
     \textit{pattern}\ \ \verb'{'\ \textit{action}\ \verb'}'
@@ -32,8 +32,8 @@
 一个函数定义具有形式:
 \begin{quote}
     \texttt{function}\ \
-    \textit{name}\verb'('\textit{parameter-list}\verb')
-    {'\textit{statement}\ \ \verb'}'
+    \textit{name}\verb'('\textit{parameter-list}\verb') {'
+        \textit{statement}\ \verb'}'
 \end{quote}
 \patact 语句和函数定义由换行符或分号分隔, 并且这两个字符可以混合使用.
 
@@ -60,4 +60,47 @@
 
 最后一个模式是范围模式, 它不能作为其他模式的组成部分. 类似地,
 \texttt{BEGIN} 和 \texttt{END} 也不能和其他模式结合.
-\marginpar{187}
+\marginpar{188}
+\subsubsection{动作}
+一个动作由一系列的语句组成, 这些语句包括:
+\begin{quote}
+    \texttt{break}
+
+    \texttt{continue}
+
+    \texttt{delete}\ \textit{array-element}
+
+    \texttt{do}\ \textit{statement}\ \texttt{while}\
+    \texttt{(}\textit{expression}\texttt{)}
+
+    \texttt{exit[}\textit{expression}\texttt{]}
+
+    \textit{expression}
+
+    \texttt{if (}\textit{expression}\texttt{) }\textit{statement}
+    \ \texttt{[else}\ \textit{statement}\texttt{]}
+
+    \textit{input-output statement}
+
+    \texttt{for (}\textit{expression}\texttt{; }\textit{expression}
+    \texttt{; }\textit{expression}\texttt{) }\textit{statement}
+
+    \texttt{for (}\textit{variable}\texttt{ in }\textit{array}\texttt{) }
+    \textit{statement}
+
+    \texttt{next}
+
+    \texttt{return [}\textit{expression}\texttt{]}
+
+    \texttt{while (}\textit{expression}\texttt{) statement}
+
+    \verb'{' \textit{statement} \verb'}'
+\end{quote}
+一个单独的分号表示空语句. 在一个 \texttt{if-else} 语句中, 如果第一个 
+\textit{statement} 和 \texttt{else} 出现在同一行, 那么它必须以分号结尾, 
+或者用花括号包围起来. 类似地, 在 \texttt{do} 语句中, 如果
+\textit{statement} 和 \texttt{while} 出现在同一行, 那么它必须以分号结尾,
+或者用花括号包围起来.
+
+\subsubsection{程序格式}
+
